Fix vertical spacing of network form

--- a/ui/app/pages/settings/networks-tab/index.scss
+++ b/ui/app/pages/settings/networks-tab/index.scss
@@ -47,7 +47,7 @@
     max-height: 465px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
 
     .page-container__footer {
       border-top: none;
